# ECNMC

./: CMakeLists.txt  DatacenterSimulation.cc  Monitor.py  N4_datacenter_switch.cc  Parameters copy.config  Parameters.config  PostProcessing.ipynb  README.md  ScalabilityTest.cc  endToEndCheck.py  exp.py  nohup.out  plots.py  temp.py
.ipynb_checkpoints/: PostProcessing-checkpoint.ipynb
DCWorkloads/: packet_size_cdf_Fabricated_Heavy_Head.csv  packet_size_cdf_Fabricated_Heavy_Middle.csv  packet_size_cdf_FacebookKeyValue_Sampled.csv  packet_size_cdf_Facebook_HadoopDist_All.csv  packet_size_cdf_Google_AllRPC.csv  packet_size_cdf_Google_SearchRPC.csv
EndToEndChecks/: BiasCalculation.py  BurstMonitor.py  Monitor_hashBased_ECMP.py  Monitor_loss.py  Monitor_perPacket_ECMP.py  Params_analysis.ipynb  PostProcessing.py  PostProcessing_naive.py  PostProcessing_perFlow.py  PostProcessing_singleQueue.py  QueueSizeMonitor.py  Utils.py  cwndMonitor.py  endToEndCheck.py  nohup.out  plots.py  plots_singleQueue.py  queueSizesingleExp.py  temp.py  temp.txt
Helpers/: cdf_y.csv  merge_cdfs.py  packet_size_cdf.csv  packet_size_cdf_offline.csv  packet_size_cdf_singleQueue.csv  pcapCsv_to_csvs.py  pcap_to_csv.sh  pcap_to_csvs.py  pcap_traffice_shape.py  pktSizeDist.py  trafficMerger_from_csv.py  trafficShapeCalculation.py  traffic_over_time_1.csv
ReplacementFiles/: bulk-send-application.cc  ipv4-global-routing.cc  ipv4-global-routing.h  ipv4-l3-protocol.cc  ipv4-l3-protocol.h  point-to-point-net-device.cc  point-to-point-net-device.h  queue-disc.cc  queue-disc.h  red-queue-disc.cc  red-queue-disc.h  tcp-socket-base.h
helper_classes/: SimulationConfig.cc  SimulationConfig.h
monitors_module/: BurstMonitor.cc  BurstMonitor.h  E2EMonitor.cc  E2EMonitor.h  Monitor.cc  Monitor.h  NetDeviceMonitor.cc  NetDeviceMonitor.h  PacketCDF.h  PacketKey.cc  PacketKey.h  PacketMonitor.cc  PacketMonitor.h  PoissonSampler copy.cc  PoissonSampler.cc  PoissonSampler.h  RegularSampler.cc  RegularSampler.h  SwitchMonitor.cc  SwitchMonitor.h
results/: 40Mbps_results.json  50Mbps_results.json  60Mbps_results.json  result.txt  results.json
results_burst/: result_11.txt  result_14.txt  result_3.txt  result_5.txt  result_7.txt
results_burst_drops/: result_1.txt  result_10.txt  result_12.txt  result_13.txt  result_2.txt  result_6.txt  result_8.txt
results_burst_old/: result_5.txt
results_forward/: result.txt  result_0.txt  result_1.txt  result_10.txt  result_11.txt  result_12.txt  result_13.txt  result_14.txt  result_15.txt  result_16.txt  result_17.txt  result_18.txt  result_19.txt  result_2.txt  result_20.txt  result_21.txt  result_22.txt  result_23.txt  result_24.txt  result_25.txt  result_26.txt  result_27.txt  result_28.txt  result_29.txt  result_3.txt  result_4.txt  result_5.txt  result_6.txt  result_7.txt  result_8.txt  result_9.txt
results_forward_test/: result_0.txt  result_1.txt  result_12.txt  result_13.txt  result_14.txt  result_15.txt  result_17.txt  result_18.txt  result_19.txt  result_22.txt  result_23.txt  result_24.txt  result_27.txt  result_3.txt  result_4.txt  result_5.txt
results_forward_test_0/: result_1.txt  result_11.txt  result_13.txt  result_14.txt  result_16.txt  result_17.txt  result_2.txt  result_20.txt  result_23.txt  result_24.txt  result_26.txt  result_3.txt  result_4.txt  result_8.txt  result_9.txt
results_forward_test_1/: result_0.txt  result_11.txt  result_12.txt  result_13.txt  result_17.txt  result_18.txt  result_2.txt  result_20.txt  result_21.txt  result_24.txt  result_27.txt  result_28.txt  result_29.txt  result_4.txt  result_5.txt  result_6.txt  result_7.txt  result_8.txt  result_9.txt
results_highRate_forward/: result_1.txt  result_10.txt  result_13.txt  result_14.txt  result_16.txt  result_17.txt  result_18.txt  result_19.txt  result_2.txt  result_23.txt  result_26.txt  result_29.txt  result_4.txt  result_5.txt
results_highRate_new_delay_1/: result_0.txt  result_1.txt  result_10.txt  result_11.txt  result_12.txt  result_13.txt  result_14.txt  result_15.txt  result_16.txt  result_17.txt  result_18.txt  result_19.txt  result_2.txt  result_20.txt  result_21.txt  result_22.txt  result_23.txt  result_24.txt  result_25.txt  result_26.txt  result_27.txt  result_28.txt  result_29.txt  result_3.txt  result_4.txt  result_5.txt  result_6.txt  result_7.txt  result_8.txt  result_9.txt
results_highRate_new_delay_2/: result_1.txt  result_15.txt  result_16.txt  result_17.txt  result_19.txt  result_27.txt  result_28.txt  result_29.txt  result_5.txt  result_8.txt  result_9.txt
(+229437 files in other folders)
